Name:            hbdd
Version:         0.1.0.0
Description:     purely functional robdd
License:         BSD3
License-file:    LICENSE
Author:          Sébastien Crozet, François Ripault
Maintainer:      developer@crozet.re
Build-Type:      Simple
Cabal-Version:   >=1.8

Library
  exposed-modules: Data.HBDD.ROBDD
                   , Data.HBDD.ROBDDContext
                   , Data.HBDD.ROBDDFactory
                   , Data.HBDD.ROBDDState
                   , Data.HBDD.Operations
                   , Data.HBDD.UIDGenerator
                   , Data.HBDD.ROBDDDot
  Build-Depends:  base, containers >= 0.5, transformers
  ghc-options:    -Wall -O2

Executable hbdd-8queens
  Build-Depends:   base, hbdd, transformers
  hs-source-dirs:  Demos
  Main-is:         8queens.hs
  ghc-options:     -Wall -O2

Executable hbdd-colormap
  Build-Depends:   base, hbdd, transformers, mtl
  hs-source-dirs:  Demos
  Main-is:         ColorMap.hs
  ghc-options:     -Wall -O2 -rtsopts

Executable hbdd-colormap-simpl
  Build-Depends:   base, hbdd, transformers, mtl, containers
  hs-source-dirs:  Demos
  Main-is:         ColorMapSimpl.hs
  ghc-options:     -Wall -O2 -rtsopts

Executable hbdd-knights
  Build-Depends:   base, hbdd, transformers, containers >= 0.5
  hs-source-dirs:  Demos
  Main-is:         KnightsTour.hs
  ghc-options:     -Wall -O2 -rtsopts
